# python-uv-fast-api-template

./: .env.example  .gitignore  README.md  pyproject.toml
app/: auth.py  main.py  models.py
app/routers/: auth.py  users.py
